force-app/main/default/objects/Builder_PO__c/Builder_PO__c.object-meta.xml
<CustomObject>
    <label>Builder PO</label>
    <nameField>
        <displayFormat>PO-{YYYY}-{0000}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builder POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>