force-app/main/default/objects/Builder_PO__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Builder_POs_By_Account</relationshipName>
    <type>Lookup</type>
</CustomField>