force-app/main/default/objects/Builder_PO__c/fields/Approval_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Submitted</label>
    <type>Checkbox</type>
</CustomField>