force-app/main/default/objects/Builder_PO__c/fields/BMG_Package_Code__c.field-meta.xml
<CustomField>
    <fullName>BMG_Package_Code__c</fullName>
    <label>BMG Package Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>