force-app/main/default/objects/Builder_PO__c/fields/Builder_Division__c.field-meta.xml
<CustomField>
    <fullName>Builder_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builder Division account (operational level, not Builder Parent) associated with this PO.</description>
    <label>Builder Division</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Builder_POs_By_Division</relationshipName>
    <type>Lookup</type>
</CustomField>