force-app/main/default/objects/Builder_PO__c/fields/Business_Days_From_PO_To_Start__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_From_PO_To_Start__c</fullName>
    <label>Business Days from PO to Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>