force-app/main/default/objects/Builder_PO__c/fields/Celigo_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Payment_Status__c</fullName>
    <label>Celigo Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>