force-app/main/default/objects/Builder_PO__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Builder_POs</relationshipName>
    <type>Lookup</type>
</CustomField>