force-app/main/default/objects/Builder_PO__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The community package that defines the scope for this PO. Drives WOLI scope requirements.</description>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Builder_POs</relationshipName>
    <type>Lookup</type>
</CustomField>