force-app/main/default/objects/Builder_PO__c/fields/Construction_Manager__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Builder_POs</relationshipName>
    <type>Lookup</type>
</CustomField>