force-app/main/default/objects/Builder_PO__c/fields/CS_Approved__c.field-meta.xml
<CustomField>
    <fullName>CS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Success has verified the PO against the Community Package and BMG scope. Required before Takeoff creation.</description>
    <label>CS Approved</label>
    <type>Checkbox</type>
</CustomField>