force-app/main/default/objects/Builder_PO__c/fields/CS_Owner__c.field-meta.xml
<CustomField>
    <fullName>CS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>CS_Owner_Builder_POs</relationshipName>
    <type>Lookup</type>
</CustomField>