force-app/main/default/objects/Builder_PO__c/fields/Days_Until_Install__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Install__c</fullName>
    <formula>Requested_Install_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Install</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>