force-app/main/default/objects/Builder_PO__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder POs (Division Account)</relationshipLabel>
    <relationshipName>Builder_POs_Division</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>