force-app/main/default/objects/Builder_PO__c/fields/Generated_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Generated_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Builder_POs</relationshipName>
    <type>Lookup</type>
</CustomField>