force-app/main/default/objects/Builder_PO__c/fields/Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>