force-app/main/default/objects/Builder_PO__c/fields/Mismatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Notes__c</fullName>
    <description>CS notes documenting the mismatch details and resolution steps.</description>
    <label>Mismatch Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>