force-app/main/default/objects/Builder_PO__c/fields/Mismatch_Type__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Type__c</fullName>
    <description>Type of mismatch found during CS PO review.</description>
    <label>Mismatch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Variance</fullName>
            </value>
            <value>
                <fullName>Scope Variance</fullName>
            </value>
            <value>
                <fullName>Package Mismatch</fullName>
            </value>
            <value>
                <fullName>Missing Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>