force-app/main/default/objects/Builder_PO__c/fields/NFI_Reason__c.field-meta.xml
<CustomField>
    <fullName>NFI_Reason__c</fullName>
    <label>NFI Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>