force-app/main/default/objects/Builder_PO__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder POs (Parent Account)</relationshipLabel>
    <relationshipName>Builder_POs_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>