force-app/main/default/objects/Builder_PO__c/fields/Pipeline_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket__c</fullName>
    <description>Calculated from Install_Date__c. Drives nightly bucket engine and Takeoff creation trigger.</description>
    <label>Pipeline Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90+ Days</fullName>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>30+ Days</fullName>
            </value>
            <value>
                <fullName>Pending Takeoff</fullName>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
            <value>
                <fullName>31 Days</fullName>
                <isActive>false</isActive>
                <label>31 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>