force-app/main/default/objects/Builder_PO__c/fields/Pipeline_Bucket_Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket_Last_Calculated__c</fullName>
    <label>Pipeline Bucket Last Calculated</label>
    <type>DateTime</type>
</CustomField>