force-app/main/default/objects/Builder_PO__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New PO</fullName>
                <default>true</default>
                <label>New PO</label>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>90+ Days</fullName>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>30+ Days</fullName>
            </value>
            <value>
                <fullName>Ready: 30 Day Forecast</fullName>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduling Queue</fullName>
            </value>
            <value>
                <fullName>Pending Takeoff</fullName>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Site Readiness Check</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completion Status</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>QI Scheduled</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>QI Complete</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>