force-app/main/default/objects/Builder_PO__c/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <label>Install Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>90+ Days</fullName>
                <default>true</default>
                <label>90+ Days</label>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>31 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>