force-app/main/default/objects/Builder_PO__c/fields/PO_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Received_Date__c</fullName>
    <label>PO Received Date</label>
    <type>Date</type>
</CustomField>