force-app/main/default/objects/Builder_PO__c/fields/PO_Validated__c.field-meta.xml
<CustomField>
    <fullName>PO_Validated__c</fullName>
    <formula>AND(ISPICKVAL(Price_Check_Result__c, &quot;Pass&quot;), ISPICKVAL(Qty_Check_Result__c, &quot;Pass&quot;))</formula>
    <label>PO Validated</label>
    <type>Checkbox</type>
</CustomField>