force-app/main/default/objects/Builder_PO__c/fields/Price_Book_Total__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Total__c</fullName>
    <label>Price Book Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>