force-app/main/default/objects/Builder_PO__c/fields/Price_Variance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance_Pct__c</fullName>
    <formula>IF(BLANKVALUE(Price_Book_Total__c, 0) = 0, 0, ((BLANKVALUE(PO_Amount__c, 0) - Price_Book_Total__c) / Price_Book_Total__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>