force-app/main/default/objects/Builder_PO__c/fields/QI_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>QI_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Scheduled</label>
    <type>Checkbox</type>
</CustomField>