force-app/main/default/objects/Builder_PO__c/fields/Qty_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Qty_Check_Result__c</fullName>
    <label>Quantity Check Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Run</fullName>
                <default>true</default>
                <label>Not Run</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>