force-app/main/default/objects/Builder_PO__c/fields/Schedule_Locked__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Locked</label>
    <type>Checkbox</type>
</CustomField>