force-app/main/default/objects/Builder_PO__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending CS Review</fullName>
                <default>true</default>
                <label>Pending CS Review</label>
            </value>
            <value>
                <fullName>NFI</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Mismatch Review</fullName>
            </value>
            <value>
                <fullName>CS Approved</fullName>
            </value>
            <value>
                <fullName>Ready for Takeoff</fullName>
                <label>Ready for Takeoff (Legacy)</label>
            </value>
            <value>
                <fullName>Takeoff In Progress</fullName>
            </value>
            <value>
                <fullName>Takeoff Complete</fullName>
            </value>
            <value>
                <fullName>Work Order Created</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Cancelled (Legacy)</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <label>Open (Legacy)</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>Processing (Legacy)</label>
            </value>
            <value>
                <fullName>Exception</fullName>
                <label>Exception (Legacy)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>