force-app/main/default/objects/Builder_PO__c/fields/Timing_Status__c.field-meta.xml
<CustomField>
    <fullName>Timing_Status__c</fullName>
    <label>Timing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Too Early</fullName>
            </value>
            <value>
                <fullName>In Expected Window</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Missing Rule</fullName>
            </value>
            <value>
                <fullName>Missing Dates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>