force-app/main/default/objects/Builder_PO__c/validationRules/No_Builder_Parent_On_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Builder_Parent_On_PO</fullName>
    <active>true</active>
    <description>Builder PO must reference a Division/Market account, not a Builder Parent. Builder Parent is roll-up only per spec rule 1.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Builder_Account__c)),
    Builder_Account__r.RecordType.DeveloperName = &quot;Builder_Parent&quot;
)</errorConditionFormula>
    <errorDisplayField>Builder_Account__c</errorDisplayField>
    <errorMessage>The Builder Account on this PO must be a Builder Division account, not a Builder Parent. Builder Parent accounts are roll-up only. Select the Division-level account (child of the Parent) that will own this PO.</errorMessage>
</ValidationRule>