force-app/main/default/objects/Builder_PO__c/validationRules/PO_Approve_Needs_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Approve_Needs_Validation</fullName>
    <active>true</active>
    <description>CS approval is blocked unless the two-way price and quantity validation passed or the mismatch review has documented resolution notes.</description>
    <errorConditionFormula>AND(
    OR(CS_Approved__c = TRUE, ISPICKVAL(Status__c, &quot;CS Approved&quot;)),
    NOT(PO_Validated__c),
    OR(
        NOT(ISPICKVAL(Status__c, &quot;Mismatch Review&quot;)),
        ISBLANK(TEXT(Mismatch_Type__c)),
        ISBLANK(Mismatch_Notes__c)
    )
)</errorConditionFormula>
    <errorMessage>A PO cannot be approved until price and quantity validate, or the mismatch is resolved.</errorMessage>
</ValidationRule>