force-app/main/default/objects/Builder_PO__c/validationRules/PO_NFI_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_NFI_Needs_Reason</fullName>
    <active>true</active>
    <description>Requires a reason before a Builder PO can be returned as Not For Install.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;NFI&quot;), ISBLANK(NFI_Reason__c))</errorConditionFormula>
    <errorMessage>Record the reason before returning a PO as NFI.</errorMessage>
</ValidationRule>